--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "vocabulary-tracker-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index_serverless.js",
-  "module": "serverless.js",
+  "main": "init/index.js",
+  "module": "init/server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node ./init/index.js",
+    "dev": "nodemon ./init/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -16,8 +17,14 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.3",
+    "mongoose": "^6.0.12",
     "path": "^0.12.7",
-    "serverless-http": "^2.7.0"
+    "serverless-http": "^2.7.0",
+    "sniffr": "^1.2.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
