--- a/serverless.yml
+++ b/serverless.yml
@@ -10,6 +10,6 @@ provider:
 
 functions:
   api:
-    handler: index_serverless.handler
+    handler: init/index_serverless.handler
     events:
       - httpApi: '*'
